--- a/0621.md
+++ b/0621.md
@@ -1,3 +1,4 @@
 # 0621
 * QQQ，跌破478就是3日线破线，看到465-471.4，所以有两个关键位置，这两个位置5分钟MACD上0轴，结合1h rsi 超卖 进场
 * SPY, 5375 附近开始全面做多，5416 附近可以做多vix和强势个股
+* NVDA 3日线上高位吞噬，但是成交量是缩量的，所以不会大幅度回调，132卖，120买
