Update and rename 0720.md to 0720复盘.md

--- a/0720复盘.md
+++ b/0720复盘.md
@@ -22,7 +22,9 @@
 * 7.17 卖出NVDA put， 成功，7.18 也做了一次。都是成功的。理由就是两个强支撑位置，很难跌破，并且财报还较远，市场惜售，破位下跌不值得。
 * 7.17 卖出3个MES put, 这个交易本身是成功的，因为到了EMA动力支撑，并且第二天也确实反弹了。失败之处是没有在跌破前1日低点时果断止损，因为跌破前1日低点就是破3日线，当天会有大跌。这个位置其实不太好判断，因为大多头趋势，下方都是支撑，任何位置都可能反弹。但是仍然要及时止损，既然时EMA13 买入，那跌破EMA13 就该止损。
 * 7.18 平仓3个MES call，这个交易到今天时浮亏的，因为430的价格平仓，现在时380.但是因为在强支撑区域平仓，很大可能会反弹超过460.因为趋势还是超级强趋势，只要反弹0.7%就可以获利了。
-* 7.19 
+* 7.19 卖出2个MNQ的put和1个MES的put。我这个卖出的QQQ的位置是464这个超强支撑位置的put，而且是下星期2平仓，如果QQQ跌倒这个位置，就是2个星期跌8，这个概率非常低。所以这个交易是好交易，胜率非常高。
+* ![image](https://github.com/user-attachments/assets/4b775c5e-ddda-4209-baf2-55d9ea748ca8)
+
 * 
 * 
 * 
