--- a/0722.md
+++ b/0722.md
@@ -19,4 +19,21 @@
      * 如果550 之后， 1h 收红，十字，或者出现2根孕线，那就看558.6 拉回， 558.6 加回全部cover call, 把mes正股，换成5500保本的MES put， 周期可以是 2 个星期
 ![image](https://github.com/user-attachments/assets/5280f08f-c4c9-47ed-9adc-b320905a28e6)
 
-* 
+* QQQ MNQ 计划
+* QQQ 在 485 是周一最关键阻力区，488 缺口是最强阻力区。 在485平仓所有-put, 在488 加回cover call. 如果一直在开盘价5分钟线之上运行，那就持有到488缺口再行动。
+* QQQ 如果出现高开5分钟向上反包，开一个488的call
+* ![image](https://github.com/user-attachments/assets/b9151b4d-f97c-4d67-a6f3-e3a86ced8316)
+
+
+* META 计划，493.3这个头部已经形成，平仓所有正股，如果开盘5分钟k线连续突破，或者向上反包，就持有到498.3.否则493.3.
+* ![image](https://github.com/user-attachments/assets/a3a4a61c-cdfc-4f69-91b6-ae8a850bda89)
+* GOOGL 计划，持有到183.2减仓2股，或者177 止损。其余3股一直持有到177止损。谷歌和META不一样，谷歌还在3D动力之上，META已经做头
+* ![image](https://github.com/user-attachments/assets/1db59fae-46bd-4440-9050-1c0f72c89c89)
+* NVDA也在动力之上，持有到128.8。put 平仓，正股持有到平价止损。
+* ![image](https://github.com/user-attachments/assets/fa95e2f7-117b-4105-893e-6edfada25186)
+* MSFT 持有到453.58 减仓80%，其余的平仓止损无限持有
+* ![image](https://github.com/user-attachments/assets/f9c9ec35-0779-4de0-ae2c-924d9da50e15)
+
+
+
+
