--- a/0722.md
+++ b/0722.md
@@ -23,6 +23,9 @@
 * QQQ 在 485 是周一最关键阻力区，488 缺口是最强阻力区。 在485平仓所有-put, 在488 加回cover call. 如果一直在开盘价5分钟线之上运行，那就持有到488缺口再行动。
 * QQQ 如果出现高开5分钟向上反包，开一个488的call
 * ![image](https://github.com/user-attachments/assets/b9151b4d-f97c-4d67-a6f3-e3a86ced8316)
+* 7.23 日计划，QQQ 如果做头，就会再474和492 之间反复震荡，直到跌破头部。计划在480附近继续卖put. 这个震荡很强，492 之前不要卖出动作
+* ![image](https://github.com/user-attachments/assets/b3469b37-12ab-4806-9cbf-d67868b79a96)
+
 
 
 * META 计划，493.3这个头部已经形成，平仓所有正股，如果开盘5分钟k线连续突破，或者向上反包，就持有到498.3.否则493.3.
