--- a/0722.md
+++ b/0722.md
@@ -18,6 +18,8 @@
      * 如果550 之后， 1h 收纯阳， 第2根也没拉回，那我就看 558.6.操作，556.7 加回2个 5200 cover call, 558.6 平仓 MES， 加回 1 个 5200 mes call
      * 如果550 之后， 1h 收红，十字，或者出现2根孕线，那就看558.6 拉回， 558.6 加回全部cover call, 把mes正股，换成5500保本的MES put， 周期可以是 2 个星期
 ![image](https://github.com/user-attachments/assets/5280f08f-c4c9-47ed-9adc-b320905a28e6)
+   4. 到达556.7 开 5690 cover call 7天以内的，因为短期创新高概率很低（7.23 更新）
+![image](https://github.com/user-attachments/assets/f0113898-1644-4440-948d-ebce72a2da2a)
 
 * QQQ MNQ 计划
 * QQQ 在 485 是周一最关键阻力区，488 缺口是最强阻力区。 在485平仓所有-put, 在488 加回cover call. 如果一直在开盘价5分钟线之上运行，那就持有到488缺口再行动。
