--- a/0722.md
+++ b/0722.md
@@ -20,6 +20,11 @@
 ![image](https://github.com/user-attachments/assets/5280f08f-c4c9-47ed-9adc-b320905a28e6)
    4. 到达556.7 开 5690 cover call 7天以内的，因为短期创新高概率很低（7.23 更新）
 ![image](https://github.com/user-attachments/assets/f0113898-1644-4440-948d-ebce72a2da2a)
+5. 利差倒挂大爆发，ES5596 买回全部cover call, 减掉全部正向杠杆。SPY看540,QQQ 看462.(5.23日晚更新）
+![image](https://github.com/user-attachments/assets/8dfa612e-b466-4484-b547-68929807711b)
+![image](https://github.com/user-attachments/assets/3e24e392-1c6a-483d-9e53-b46c5f2ba149)
+![image](https://github.com/user-attachments/assets/d29f0694-5f7c-4b1d-9c5f-e73467243e04)
+![image](https://github.com/user-attachments/assets/c591226d-5075-4cf9-99ba-b6cd0717063e)
 
 * QQQ MNQ 计划
 * QQQ 在 485 是周一最关键阻力区，488 缺口是最强阻力区。 在485平仓所有-put, 在488 加回cover call. 如果一直在开盘价5分钟线之上运行，那就持有到488缺口再行动。
