--- a/0722.md
+++ b/0722.md
@@ -33,6 +33,9 @@
 * ![image](https://github.com/user-attachments/assets/b9151b4d-f97c-4d67-a6f3-e3a86ced8316)
 * 7.23 日计划，QQQ 如果做头，就会再474和492 之间反复震荡，直到跌破头部。计划在480附近继续卖put. 这个震荡很强，492 之前不要卖出动作
 * ![image](https://github.com/user-attachments/assets/b3469b37-12ab-4806-9cbf-d67868b79a96)
+* QQQ 周线月线看法，QQQ这个周线可以看出，7.23暴跌还太早，即使今天利差大收敛，至少本周还要震荡吸筹。从月线来看，未来6个交易日本月才结束，很难跌破480这个月线开盘价，因为长上影收红线的月份没有存在过。MA5大角度线上很难收红。空头还是要到487-489位置吸筹的。
+![image](https://github.com/user-attachments/assets/c3f9b629-0b2b-4006-bea7-d11232529264)
+![image](https://github.com/user-attachments/assets/56049164-81b7-4d5e-908d-bbe51b7697d3)
 
 
 
