--- a/0722.md
+++ b/0722.md
@@ -11,7 +11,7 @@
 
 
 
-## 2. 7.22 - 7.26 日 交易计划
+## 2. 7.22 - 7.26 日 交易计划，根据利差到挂，下周1或者2会有大跌，但是同时又不会跌破7月开盘价，那只能是这周要涨，也就是QQQ至少要到488.4才能给出空间跌2.5%以上
 * 1. 大盘SPX，现在是收在3k线低点（548.6）（破位边缘，如果破位就看540，5440）。  2. SPX 5440, MES 5460（548.6之下的强支撑位）
 * 2. 交易计划，如果跌破 548 这个h级别小平台，下一个交易位置就是SPX 5460 （破位向下）。我在5460这个位置，卖 MES5460 的 put
   3. 如果高开在550 之上， 并且20分钟，h k线上反包突破551.5， 就再买入2个MES。（这里同时要验证两个信号KDJ 过40， MACD金叉，要有20分钟级别的双突破） 这个剧本的下一个交易的区间是556.7，558.6。这个方法的止损就是20分钟开盘价被跌破。
