--- a/0722.md
+++ b/0722.md
@@ -45,9 +45,14 @@
 * ![image](https://github.com/user-attachments/assets/1db59fae-46bd-4440-9050-1c0f72c89c89)
 * NVDA也在动力之上，持有到128.8。put 平仓，正股持有到平价止损。
 * ![image](https://github.com/user-attachments/assets/fa95e2f7-117b-4105-893e-6edfada25186)
+* 7.24 日更新，跌至最强支撑，1h级别严重超卖（底背离，如果跌破114.4就全部止损）。RSI 反弹至60，且价格到118.3 附近，卖122短期call
+* ![image](https://github.com/user-attachments/assets/ac1fa8ad-6350-4727-9b57-8a699d8f0a9d)
+
 * MSFT 持有到453.58 减仓80%，其余的平仓止损无限持有
 * ![image](https://github.com/user-attachments/assets/f9c9ec35-0779-4de0-ae2c-924d9da50e15)
-
+* SOXX 在最强支撑, 反弹至中等压力237减仓50股，回踩再加回来。从周线图来看，反弹至247（周线3K线低点，7%）的可能性很大，而且现在处于周线级别ES动力
+![image](https://github.com/user-attachments/assets/888333ea-6eb8-4285-b172-42cdf27ec89d)
+![image](https://github.com/user-attachments/assets/cfcfac8b-eaa9-4f6d-85fd-48464820d491)
 
 
 
