--- a/0722.md
+++ b/0722.md
@@ -26,6 +26,8 @@
 ![image](https://github.com/user-attachments/assets/d29f0694-5f7c-4b1d-9c5f-e73467243e04)
 ![image](https://github.com/user-attachments/assets/c591226d-5075-4cf9-99ba-b6cd0717063e)
 ![image](https://github.com/user-attachments/assets/e5ffe255-9d09-483b-a468-e7210c828bd4)
+6. 7.24 日更新， SPY一个底部5-20分钟刺破，破底翻形态。所以止损点在541.4，跌破就卖2个MNQ锁定。20分钟RSI超卖底背离，大概率要修复到60以上。明天只要开在542.6之上，并且不跌破541.4就可以期待一波反弹
+![image](https://github.com/user-attachments/assets/0a5a2791-e04b-40a8-b25b-cfc0bec86e58)
 
 * QQQ MNQ 计划
 * QQQ 在 485 是周一最关键阻力区，488 缺口是最强阻力区。 在485平仓所有-put, 在488 加回cover call. 如果一直在开盘价5分钟线之上运行，那就持有到488缺口再行动。
@@ -36,8 +38,9 @@
 * QQQ 周线月线看法，QQQ这个周线可以看出，7.23暴跌还太早，即使今天利差大收敛，至少本周还要震荡吸筹。从月线来看，未来6个交易日本月才结束，很难跌破480这个月线开盘价，因为长上影收红线的月份没有存在过。MA5大角度线上很难收红。空头还是要到487-489位置吸筹的。
 ![image](https://github.com/user-attachments/assets/c3f9b629-0b2b-4006-bea7-d11232529264)
 ![image](https://github.com/user-attachments/assets/56049164-81b7-4d5e-908d-bbe51b7697d3)
-
-
+* 7.24 日更新，QQQ我的MNQ盈亏平衡点在470.5，我在471.7 卖掉两个call 8月初附近19930的位置, 这样震荡中可以收到两个方向期权的权利金。19930相当于QQQ480，从7月月线的长上影来看，有非常强的动力向480
+![image](https://github.com/user-attachments/assets/9e9c2272-4deb-43ea-a494-9aba0cc3f2fd)
+* 
 
 * META 计划，493.3这个头部已经形成，平仓所有正股，如果开盘5分钟k线连续突破，或者向上反包，就持有到498.3.否则493.3.
 * ![image](https://github.com/user-attachments/assets/a3a4a61c-cdfc-4f69-91b6-ae8a850bda89)
