--- a/0722.md
+++ b/0722.md
@@ -28,6 +28,9 @@
 ![image](https://github.com/user-attachments/assets/e5ffe255-9d09-483b-a468-e7210c828bd4)
 6. 7.24 日更新， SPY一个底部5-20分钟刺破，破底翻形态。所以止损点在541.4，跌破就卖2个MNQ锁定。20分钟RSI超卖底背离，大概率要修复到60以上。明天只要开在542.6之上，并且不跌破541.4就可以期待一波反弹
 ![image](https://github.com/user-attachments/assets/0a5a2791-e04b-40a8-b25b-cfc0bec86e58)
+7. 7.24 日更新 SPX现在处于2023年10月以来的绿色上升趋势线的边缘，以及小支撑平台（黄色）如果跌破，就要向下看5200点的日线上升趋势均线，以及5100点附近的强支撑。只有突破之后的小平台和青色下降趋势，才重回上升趋势。在今天跌破前3日的3k组合线的时候，青色下降趋势确认了
+   * 交易计划。跌破5420就继续全仓对冲，3个MNQ锁定，直到再形成20分钟小平台后，向上突破小平台再回到5420之上。找到双突破小平台之前，就守5420，找到之后，小平台向下跌破，就全仓锁定。向上双突破就继续持有多单。
+   ![image](https://github.com/user-attachments/assets/5b1ea699-2ffa-4747-9eba-270255808eda)
 
 * QQQ MNQ 计划
 * QQQ 在 485 是周一最关键阻力区，488 缺口是最强阻力区。 在485平仓所有-put, 在488 加回cover call. 如果一直在开盘价5分钟线之上运行，那就持有到488缺口再行动。
@@ -40,7 +43,11 @@
 ![image](https://github.com/user-attachments/assets/56049164-81b7-4d5e-908d-bbe51b7697d3)
 * 7.24 日更新，QQQ我的MNQ盈亏平衡点在470.5，我在471.7 卖掉两个call 8月初附近19930的位置, 这样震荡中可以收到两个方向期权的权利金。19930相当于QQQ480，从7月月线的长上影来看，有非常强的动力向480
 ![image](https://github.com/user-attachments/assets/9e9c2272-4deb-43ea-a494-9aba0cc3f2fd)
-* 
+* 7.24 QQQ 趋势更新，QQQ已经跌破了绿色的中期趋势线和动力线，已经进入右侧，处于青色的压力线下方。因为处于右侧，所以只有找到小平台之后，突破小平台和青色线，才回到冲击489缺口位置的形势。在没有此条件的情况下，都是等小平台跌破之后，买入456这个行权价的put保护正股。
+* 只要没有跌破456和蓝色上升趋势线形成双跌破，就还是上升趋势。但是跌破小平台都要保护。
+* 现在这种结构下，重回大牛市，需要突破489
+* ![image](https://github.com/user-attachments/assets/ca1ff780-fc69-4a44-923d-09dd4259e0b4)
+
 
 * META 计划，493.3这个头部已经形成，平仓所有正股，如果开盘5分钟k线连续突破，或者向上反包，就持有到498.3.否则493.3.
 * ![image](https://github.com/user-attachments/assets/a3a4a61c-cdfc-4f69-91b6-ae8a850bda89)
@@ -56,6 +63,9 @@
 * SOXX 在最强支撑, 反弹至中等压力237减仓50股，回踩再加回来。从周线图来看，反弹至247（周线3K线低点，7%）的可能性很大，而且现在处于周线级别ES动力
 ![image](https://github.com/user-attachments/assets/888333ea-6eb8-4285-b172-42cdf27ec89d)
 ![image](https://github.com/user-attachments/assets/cfcfac8b-eaa9-4f6d-85fd-48464820d491)
+* 7.24 SOXX 趋势判断，只要SOXX还在绿色趋势线之上，就还是上涨，就是要逢低做多持有。但是如果想再次强势走强，就要突破255的黄金分割，青色下降趋势线，以及255的中等压力区。在青色线左侧的时候，还是偏空头震荡，可以持续下跌
+* 交易计划，只要在230之上，就继续持有到255，因为趋势还是向上的，红线的下降趋势太陡峭了，很难持续。跌破230，就买225的put.这里用put,因为已经是右侧了，cover call 很大可能弥补不了损失。
+* ![image](https://github.com/user-attachments/assets/aec7037b-d24d-42ef-a7c2-e29dada02429)
 
 
 
