--- a/0722.md
+++ b/0722.md
@@ -31,6 +31,7 @@
 7. 7.24 日更新 SPX现在处于2023年10月以来的绿色上升趋势线的边缘，以及小支撑平台（黄色）如果跌破，就要向下看5200点的日线上升趋势均线，以及5100点附近的强支撑。只有突破之后的小平台和青色下降趋势，才重回上升趋势。在今天跌破前3日的3k组合线的时候，青色下降趋势确认了
    * 交易计划。跌破5420就继续全仓对冲，3个MNQ锁定，直到再形成20分钟小平台后，向上突破小平台再回到5420之上。找到双突破小平台之前，就守5420，找到之后，小平台向下跌破，就全仓锁定。向上双突破就继续持有多单。
    ![image](https://github.com/user-attachments/assets/5b1ea699-2ffa-4747-9eba-270255808eda)
+8. 7.25 日交易计划
 
 * QQQ MNQ 计划
 * QQQ 在 485 是周一最关键阻力区，488 缺口是最强阻力区。 在485平仓所有-put, 在488 加回cover call. 如果一直在开盘价5分钟线之上运行，那就持有到488缺口再行动。
@@ -47,6 +48,10 @@
 * 只要没有跌破456和蓝色上升趋势线形成双跌破，就还是上升趋势。但是跌破小平台都要保护。
 * 现在这种结构下，重回大牛市，需要突破489
 * ![image](https://github.com/user-attachments/assets/ca1ff780-fc69-4a44-923d-09dd4259e0b4)
+7.25 日交易计划更新，参考8月份的激素下跌，远离EMA，有两个点要注意，这是趋势线相对远的地方，意味着相对强，所以反转的信号必然是###两天的绿线，而不是双红的孕线。而且这次是2次大型超卖。
+* 结论1. 周五和周一的开盘价，几乎可以确认是是本轮的低点
+* 2. 根据超卖的程度，和周波动量
+  ![image](https://github.com/user-attachments/assets/e3d50776-788d-4da7-9225-dfe26bc33773)
 
 
 * META 计划，493.3这个头部已经形成，平仓所有正股，如果开盘5分钟k线连续突破，或者向上反包，就持有到498.3.否则493.3.
