--- a/0722.md
+++ b/0722.md
@@ -49,8 +49,12 @@
 * 现在这种结构下，重回大牛市，需要突破489
 * ![image](https://github.com/user-attachments/assets/ca1ff780-fc69-4a44-923d-09dd4259e0b4)
 7.25 日交易计划更新，参考8月份的激素下跌，远离EMA，有两个点要注意，这是趋势线相对远的地方，意味着相对强，所以反转的信号必然是###两天的绿线，而不是双红的孕线。而且这次是2次大型超卖。
-* 结论1. 周五和周一的开盘价，几乎可以确认是是本轮的低点
-* 2. 根据超卖的程度，和周波动量
+* 结论1. 周五和周一的开盘价，几乎可以确认是是本轮的低点（越接近越可靠）。第一个收绿的一天几乎就是底部。开盘5分钟第2根k反包或者高开就进场做多
+* 因为反弹会很高，所以安全起见，在出现孕线十字星，或者中阳线之前，不要解除对冲。
+* 2. 根据超卖的程度，和周波动量，452几乎可以确认是本轮低点
+  3. 关注MA5，这是第一个目标位置，第2个目标位置是EMA1321（一定会有大回撤，必定要cover)这个回撤位置是最近的一个3k台阶上部，就是479这个位置。
+  4. 本轮反弹目标至少是481,很大可能是492，所以一旦拿到筹码，不到目标不出场
+  5. 每日波动至少1.5以上，所以根据这个找最近的MA5和EMA
   ![image](https://github.com/user-attachments/assets/e3d50776-788d-4da7-9225-dfe26bc33773)
 
 
