--- a/0722.md
+++ b/0722.md
@@ -55,7 +55,12 @@
   3. 关注MA5，这是第一个目标位置，第2个目标位置是EMA1321（一定会有大回撤，必定要cover)这个回撤位置是最近的一个3k台阶上部，就是479这个位置。
   4. 本轮反弹目标至少是481,很大可能是492，所以一旦拿到筹码，不到目标不出场
   5. 每日波动至少1.5以上，所以根据这个找最近的MA5和EMA
+  6. 最起码要有一个底部1h级别的3k突破和MACD金叉。所以周五如果高开，也会有探底，不要着急解除。直到出现3根小时级别k线不创新低，才有可能是底部。
+  7. 低开的情况，看QQQ小时级别MACD强烈到鸭嘴，至少明天上午前2个小时远离458的概率很低，我至少要持有对冲到9：30再决定逢低解除。也就是直到有可能看到底部1h 有3k突破形成才行。
+  8. 高开的情况是，高开再462附近，然后震荡1h。这种情况下，如果突破了464，底部就成行了。即使是这种情况，也会回踩458附近（开盘价至少向下1.5美金）
+  9. 所以不论高低开，都要等第2根小时k线突破，如果没有底部头肩出现，那就一直持有。即使高开，也要观望
   ![image](https://github.com/user-attachments/assets/e3d50776-788d-4da7-9225-dfe26bc33773)
+  ![image](https://github.com/user-attachments/assets/3bf153ff-ab81-4c1e-acc7-736185852a3f)
 
 
 * META 计划，493.3这个头部已经形成，平仓所有正股，如果开盘5分钟k线连续突破，或者向上反包，就持有到498.3.否则493.3.
