--- a/0722.md
+++ b/0722.md
@@ -50,8 +50,8 @@
 * ![image](https://github.com/user-attachments/assets/ca1ff780-fc69-4a44-923d-09dd4259e0b4)
 7.25 日交易计划更新，参考8月份的激素下跌，远离EMA，有两个点要注意，这是趋势线相对远的地方，意味着相对强，所以反转的信号必然是###两天的绿线，而不是双红的孕线。而且这次是2次大型超卖。
 * 结论1. 周五和周一的开盘价，几乎可以确认是是本轮的低点（越接近越可靠）。第一个收绿的一天几乎就是底部。开盘5分钟第2根k反包或者高开就进场做多
-* 因为反弹会很高，所以安全起见，在出现孕线十字星，或者中阳线之前，不要解除对冲。如果这一天回踩之后，或者直接大多数时间都在开盘价以上运行，基本上可以确定是底部了
-* 2. 根据超卖的程度，和周波动量，452几乎可以确认是本轮低点
+* 因为反弹会很高（至少481），所以安全起见，在出现孕线十字星，或者中阳线之前，不要解除对冲。如果这一天回踩之后，或者直接大多数时间都在开盘价以上运行，基本上可以确定是底部了
+* 2. 根据超卖的程度，和周波动量，453几乎可以确认是本轮低点（结合Andy提供的结构位置）
   3. 关注MA5，这是第一个目标位置，第2个目标位置是EMA1321（一定会有大回撤，必定要cover)这个回撤位置是最近的一个3k台阶上部，就是479这个位置。
   4. 本轮反弹目标至少是481,很大可能是492，所以一旦拿到筹码，不到目标不出场
   5. 每日波动至少1.5以上，所以根据这个找最近的MA5和EMA
@@ -59,6 +59,8 @@
   7. 低开的情况，看QQQ小时级别MACD强烈到鸭嘴，至少明天上午前2个小时远离458的概率很低，我至少要持有对冲到9：30再决定逢低解除。也就是直到有可能看到底部1h 有3k突破形成才行。
   8. 高开的情况是，高开再462附近，然后震荡1h。这种情况下，如果突破了464，底部就成行了。即使是这种情况，也会回踩458附近（开盘价至少向下1.5美金）
   9. 所以不论高低开，都要等第2根小时k线突破，如果没有底部头肩出现，那就一直持有。即使高开，也要观望
+  10. 计划，453 附近，看到1h级别第2根反包，其实主要是看3k线突破就确定是底部了。
+  11. 到EM321的时候就把put都cover 掉
   ![image](https://github.com/user-attachments/assets/e3d50776-788d-4da7-9225-dfe26bc33773)
   ![image](https://github.com/user-attachments/assets/3bf153ff-ab81-4c1e-acc7-736185852a3f)
 
