--- a/0722.md
+++ b/0722.md
@@ -58,7 +58,7 @@
   6. 最起码要有一个底部1h级别的3k突破和MACD金叉。所以周五如果高开，也会有探底，不要着急解除。直到出现3根小时级别k线不创新低，才有可能是底部。
   7. 低开的情况，看QQQ小时级别MACD强烈到鸭嘴，至少明天上午前2个小时远离458的概率很低，我至少要持有对冲到9：30再决定逢低解除。也就是直到有可能看到底部1h 有3k突破形成才行。
   8. 高开的情况是，高开再462附近，然后震荡1h。这种情况下，如果突破了464，底部就成行了。即使是这种情况，也会回踩458附近（开盘价至少向下1.5美金）
-  9. 所以不论高低开，都要等第2根小时k线突破，如果没有底部头肩出现，那就一直持有。即使高开，也要观望
+  9. 所以不论高低开，都要等第2根小时k线突破，如果没有底部头肩出现（以及MACD金叉），那就一直持有。即使高开，也要观望
   10. 计划，453 附近，看到1h级别第2根反包，其实主要是看3k线突破就确定是底部了。
   11. 到EM321的时候就把put都cover 掉
   ![image](https://github.com/user-attachments/assets/e3d50776-788d-4da7-9225-dfe26bc33773)
