--- a/0722.md
+++ b/0722.md
@@ -82,6 +82,8 @@
 * 7.24 SOXX 趋势判断，只要SOXX还在绿色趋势线之上，就还是上涨，就是要逢低做多持有。但是如果想再次强势走强，就要突破255的黄金分割，青色下降趋势线，以及255的中等压力区。在青色线左侧的时候，还是偏空头震荡，可以持续下跌
 * 交易计划，只要在230之上，就继续持有到255，因为趋势还是向上的，红线的下降趋势太陡峭了，很难持续。跌破230，就买225的put.这里用put,因为已经是右侧了，cover call 很大可能弥补不了损失。
 * ![image](https://github.com/user-attachments/assets/aec7037b-d24d-42ef-a7c2-e29dada02429)
+7.25 日更新，SOXX 221的低点几乎可以确认是地点了。只要1h级别MACD金叉底背离，3K头肩出现，就可以加仓进场了，可以开239的长call
+  ![image](https://github.com/user-attachments/assets/abdc3f28-71f5-4e0a-95fa-283442e8b943)
 
 
 
