--- a/0722.md
+++ b/0722.md
@@ -31,7 +31,10 @@
 7. 7.24 日更新 SPX现在处于2023年10月以来的绿色上升趋势线的边缘，以及小支撑平台（黄色）如果跌破，就要向下看5200点的日线上升趋势均线，以及5100点附近的强支撑。只有突破之后的小平台和青色下降趋势，才重回上升趋势。在今天跌破前3日的3k组合线的时候，青色下降趋势确认了
    * 交易计划。跌破5420就继续全仓对冲，3个MNQ锁定，直到再形成20分钟小平台后，向上突破小平台再回到5420之上。找到双突破小平台之前，就守5420，找到之后，小平台向下跌破，就全仓锁定。向上双突破就继续持有多单。
    ![image](https://github.com/user-attachments/assets/5b1ea699-2ffa-4747-9eba-270255808eda)
-8. 7.25 日交易计划
+* 8. 7.26 日交易计划，SPX必须要收在5445（544） 这个强弱转换的位置之上，否则就是确认跌破趋势
+* 1. 计划，SPY 回踩540.6,出现底部双突破。到这个位置的时候，就去抄底SOXX.
+ ![image](https://github.com/user-attachments/assets/f0cdb612-8fc0-4c38-9ed4-923065d0aef0)
+
 
 * QQQ MNQ 计划
 * QQQ 在 485 是周一最关键阻力区，488 缺口是最强阻力区。 在485平仓所有-put, 在488 加回cover call. 如果一直在开盘价5分钟线之上运行，那就持有到488缺口再行动。
@@ -84,6 +87,7 @@
 * ![image](https://github.com/user-attachments/assets/aec7037b-d24d-42ef-a7c2-e29dada02429)
 7.25 日更新，SOXX 221的低点几乎可以确认是地点了。只要1h级别MACD金叉底背离，3K头肩出现，就可以加仓进场了，可以开239的长call
   ![image](https://github.com/user-attachments/assets/abdc3f28-71f5-4e0a-95fa-283442e8b943)
-
+7.26 日交易计划，SOXL .SOXX上冲MA5,再收在224.5附近，这样周线就会超卖，就完美了，下周开始反弹（最终目标248以上，成本在244）
+  * 接近 43.5 的时候卖43.5 的call. 接近38的时候，就卖38的put.接近43.5 就卖50的call（如果下去就解了这个call 赚50$,再到43.5 再卖）
 
 
