--- a/0722.md
+++ b/0722.md
@@ -37,6 +37,9 @@
 
 
 * QQQ MNQ 计划
+* QQQ 7.26交易计划。到471.3的时候，卖19650的cover call 3个（如果这个成功，那在462附近19100位置，解除-MNQ)
+* ![image](https://github.com/user-attachments/assets/5e7eb8af-68f5-4b5d-81e2-2cf4ab089bc0)
+
 * QQQ 在 485 是周一最关键阻力区，488 缺口是最强阻力区。 在485平仓所有-put, 在488 加回cover call. 如果一直在开盘价5分钟线之上运行，那就持有到488缺口再行动。
 * QQQ 如果出现高开5分钟向上反包，开一个488的call
 * ![image](https://github.com/user-attachments/assets/b9151b4d-f97c-4d67-a6f3-e3a86ced8316)
