--- a/0722.md
+++ b/0722.md
@@ -37,7 +37,7 @@
 
 
 * QQQ MNQ 计划
-* QQQ 7.26交易计划。到471.3(19515NQ附近,卖5天的200点左右）的时候，卖19650的cover call 3个（如果这个成功，没有成功的话，坚决不减仓，那在462附近19100位置，解除-MNQ)
+* QQQ 7.26交易计划。到471.3(19515NQ附近,卖5天的200点左右）的时候，卖19650的cover call 3个（如果这个成功，没有成功的话，坚决不减仓，那在462附近19100位置，解除-MNQ)454.5才能减掉MNQ去做多
 * ![image](https://github.com/user-attachments/assets/5e7eb8af-68f5-4b5d-81e2-2cf4ab089bc0)
 
 * QQQ 在 485 是周一最关键阻力区，488 缺口是最强阻力区。 在485平仓所有-put, 在488 加回cover call. 如果一直在开盘价5分钟线之上运行，那就持有到488缺口再行动。
