Update and rename 8.5,8.9交易计划 to 8.5,8.9交易计划.md

--- a/8.5,8.9交易计划.md
+++ b/8.5,8.9交易计划.md
@@ -1,5 +1,8 @@
 # 财报日期
-* 
+* 本周要特别关于减肥药板块，因为减肥药是这一波拉升的另一个主力，在周三周四
+* ![image](https://github.com/user-attachments/assets/8e1cf0e7-f84e-4067-a24a-991af9718d24)
+
+
 # 经济数据
 *![image](https://github.com/user-attachments/assets/d2f04a76-e711-4a6f-a292-c250a3e3108d)
 ![image](https://github.com/user-attachments/assets/f344257e-76c2-4300-afc2-3a2b9f9de8b4)
