--- a/8.5,8.9交易计划.md
+++ b/8.5,8.9交易计划.md
@@ -4,6 +4,7 @@
 
 
 # 经济数据
-*![image](https://github.com/user-attachments/assets/d2f04a76-e711-4a6f-a292-c250a3e3108d)
-![image](https://github.com/user-attachments/assets/f344257e-76c2-4300-afc2-3a2b9f9de8b4)
+* 经济数据最重要的就是PMI，以及周四失业金人数。如果都是50以下的衰退，那就要崩了。失业金人数如果大超预期，也是继续崩。但是如果都好于预期，大的反转就在路上了
+* ![image](https://github.com/user-attachments/assets/a0ab7845-2e5c-42fd-8eb7-e0f06a5076bc)
+
 # 7.29- 8.2 交易计划
