--- a/8.5,8.9交易计划.md
+++ b/8.5,8.9交易计划.md
@@ -7,4 +7,12 @@
 * 经济数据最重要的就是PMI，以及周四失业金人数。如果都是50以下的衰退，那就要崩了。失业金人数如果大超预期，也是继续崩。但是如果都好于预期，大的反转就在路上了
 * ![image](https://github.com/user-attachments/assets/a0ab7845-2e5c-42fd-8eb7-e0f06a5076bc)
 
-# 7.29- 8.2 交易计划
+# 8.5- 8.9 交易计划
+* 8.5 日计划剧本1和2都是多头在强支撑吸筹码后，努力拉回趋势线以上。这种情况下，还是看多的，因为大的上升趋势还在。但是如果周一还在454附近晃，甚至跌的更远，那就是彻底转为空头，直到484才能再次确认进入右侧上升趋势。
+* 剧本3， 是中期震荡寻底止跌，但是中期的上升趋势彻底破坏，要再次寻找上升趋势线，甚至要回到，427左右的更长期趋势线了。总之短期内无法回到474.这种弱势震荡平台就再427-446 之间打底。
+* 剧本1， 小幅高开，向1h ema 走， 在456.5 附近以几乎为0的价格平掉18700 的put. 这时候只剩1个put,到462附近，18300的put也几乎为0了，也平掉。
+* 剧本2， 大幅度高开在456.6以上，突破462（剧本1也可以突破462），就要卖2个18500的put. 平衡这两个19000的call.
+* 剧本3，低开继续奔向436，再开一个19000的call, 务必把成本做到19200.这样的趋势，就要震荡很久才能回19200这个区间了。
+* ![image](https://github.com/user-attachments/assets/9a5f14ee-90e8-4fd1-ae36-3eaf9dd06d6c)
+
+
