--- a/8.5,8.9交易计划.md
+++ b/8.5,8.9交易计划.md
@@ -8,13 +8,19 @@
 * ![image](https://github.com/user-attachments/assets/a0ab7845-2e5c-42fd-8eb7-e0f06a5076bc)
 
 # 8.5- 8.9 交易计划，几个关键点位436，462，474，趋势还是向下，但是接近436 平空单，接近474就开空单。
+# 8月份剧本
+* 因为8月有大量的回购，所以整体是跌不下去的，猜测的剧本，先到462补两个缺口，到EMA被压下来，回踩446支撑再突破442和下降趋势向484补缺口。这个缺口一定要补的，最多留一个突破缺口就是490.但是只要没过484都还是下降震荡趋势，再破位还是空头。
+* ![image](https://github.com/user-attachments/assets/676261cd-aedf-4dd7-9244-ca91865630f4)
+
 ## 8.6 日交易计划
 * 首先分析8.5 日交易计划的漏洞，我确实是开了19000的Call，并且都顺利平仓了，但是当这些call 在18000 平仓后，-4 个MNQ 就成为裸卖了，这是十分危险的，仓位极大，因为18000是我本轮交易的底线，所以必须在这个位置确保仓位中性。因为低于这个位置我就无法知道具体能到哪里了。
+* 从435 到 458 中间缺口太多，虽然有两个重支撑/压力，把缺口3 和 4 都补上的概率很高，因为没有筹码交换，并且本周就开始回购，8月1日到8月11日是指数上行，一直到月底。所以不要轻易看空。11日的call 和 put 就留着，这个18400的call,盈亏平衡点在19000这个重压力
 * 8.6 剧本1，跌破432.83(17897)就需要再卖一个MNQ确保仓位中性。这种极度恐慌，无法估计下跌区间，只能等底部走出来。
 * 8.6 剧本2，只要是高开，就不言顶，最高可以到458（5%）。黄金分割点455以上概率降低了，但是可以8.7再到达。终极目标是EMA（462附近）
 * 剧本2，18745附近（是451，但是最远可到453），解除3个MNQ put, 因为这也是个压力位置，所以拉回的时候，把MNQ也平掉。
-* 只要是上涨就所有仓位都持有，431.7 之下再加一个MNQ对冲正股
+* 只要是上涨就所有仓位都持有，431.7 之下再加一个MNQ对冲正股。 
 * ![image](https://github.com/user-attachments/assets/93da5c3e-2bed-4ab3-aead-a7a365131144)
+* ![image](https://github.com/user-attachments/assets/6b98b756-fb1c-4903-8249-d3129f556d04)
 
 
 * 8.5 盘前已经确定是剧本3， 大幅度低开，因为老巴卖股票以及衰退指标，但是短期利空出尽，且回购窗口9日开启，而且现在3天内已经跌了7%以上（7天跌7%的概率是小于14%），到440这个位置，是EMA的趋势极限，同时也超过了（7.33%）。也出现了第4个缺口。所以未来7天再出现低点的概率非常低。
