--- a/8.5,8.9交易计划.md
+++ b/8.5,8.9交易计划.md
@@ -15,6 +15,7 @@
 ## 8.6 日交易计划
 * 首先分析8.5 日交易计划的漏洞，我确实是开了19000的Call，并且都顺利平仓了，但是当这些call 在18000 平仓后，-4 个MNQ 就成为裸卖了，这是十分危险的，仓位极大，因为18000是我本轮交易的底线，所以必须在这个位置确保仓位中性。因为低于这个位置我就无法知道具体能到哪里了。
 * 从435 到 458 中间缺口太多，虽然有两个重支撑/压力，把缺口3 和 4 都补上的概率很高，因为没有筹码交换，并且本周就开始回购，8月1日到8月11日是指数上行，一直到月底。所以不要轻易看空。11日的call 和 put 就留着，这个18400的call,盈亏平衡点在19000这个重压力
+* 务必要注意，只要还在蓝色的下降趋势线之下，就是下降趋势，遇到重要压力位掉头的概率很高
 * 8.6 剧本1，跌破432.83(17897)就需要再卖一个MNQ确保仓位中性。这种极度恐慌，无法估计下跌区间，只能等底部走出来。
 * 8.6 剧本2，只要是高开，就不言顶，最高可以到458（5%）。黄金分割点455以上概率降低了，但是可以8.7再到达。终极目标是EMA（462附近）
 * 剧本2，18745附近（是451，但是最远可到453），解除3个MNQ put, 因为这也是个压力位置，所以拉回的时候，把MNQ也平掉。
