--- a/8.5,8.9交易计划.md
+++ b/8.5,8.9交易计划.md
@@ -32,4 +32,10 @@
 * 剧本3，低开继续奔向436，再开一个19000的call（丽雅要开2个）, 务必把成本做到19200.这样的趋势，就要震荡很久才能回19200这个区间了。这个时候手里会受到3个MNQ,这3个call 不是裸卖，没有风险。最佳结果是到19200把他们都平了。
 * ![image](https://github.com/user-attachments/assets/9a5f14ee-90e8-4fd1-ae36-3eaf9dd06d6c)
 
+# 8.6 日 SOXX 交易计划
+* 上方还是有3个缺口，所以目标价格是250$ 补缺口，而且应该是急速拉升，不要乱减仓. 第一个阻力位220(34.7),第二个位置250(52).才回本。不要乱减仓。行成底部突破后(1h MACD 底背离，双突破，可以考虑call)
+* ![image](https://github.com/user-attachments/assets/fc95e980-0396-4402-bf83-00d998b61254)
+
+* ![image](https://github.com/user-attachments/assets/aab6174e-bd3c-4b28-8da8-b81e9e0fae0d)
+
 
