--- a/8.5,8.9交易计划.md
+++ b/8.5,8.9交易计划.md
@@ -11,6 +11,9 @@
 # 8月份剧本
 * 因为8月有大量的回购，所以整体是跌不下去的，猜测的剧本，先到462补两个缺口，到EMA被压下来，回踩446支撑再突破442和下降趋势向484补缺口。这个缺口一定要补的，最多留一个突破缺口就是490.但是只要没过484都还是下降震荡趋势，再破位还是空头。
 * ![image](https://github.com/user-attachments/assets/676261cd-aedf-4dd7-9244-ca91865630f4)
+## 8.7 日交易计划
+![image](https://github.com/user-attachments/assets/c04ddd4b-155f-4d2a-a043-b6530b4f97fc)
+![image](https://github.com/user-attachments/assets/ee341fb2-810f-47ab-b3f6-67f0055cf8d5)
 
 ## 8.6 日交易计划
 * 首先分析8.5 日交易计划的漏洞，我确实是开了19000的Call，并且都顺利平仓了，但是当这些call 在18000 平仓后，-4 个MNQ 就成为裸卖了，这是十分危险的，仓位极大，因为18000是我本轮交易的底线，所以必须在这个位置确保仓位中性。因为低于这个位置我就无法知道具体能到哪里了。
