--- a/8.5,8.9交易计划.md
+++ b/8.5,8.9交易计划.md
@@ -44,5 +44,8 @@
 * ![image](https://github.com/user-attachments/assets/fc95e980-0396-4402-bf83-00d998b61254)
 
 * ![image](https://github.com/user-attachments/assets/aab6174e-bd3c-4b28-8da8-b81e9e0fae0d)
+# 8.7 日ASML 看法，作为今天领涨的标的，已经到了最强的一个陡峭缺口，877附近，所以今天确实有可能高开低走被打下来一波。但是下方也有支撑和超卖，它也到了EMA动力位置。
+![image](https://github.com/user-attachments/assets/1c138855-bb37-4144-9ed1-ce07f43e71b8)
+![image](https://github.com/user-attachments/assets/17b0f298-cf51-4897-96b0-623887c1c66f)
 
 
