--- a/8.5,8.9交易计划.md
+++ b/8.5,8.9交易计划.md
@@ -42,10 +42,18 @@
 # 8.6 日 SOXX 交易计划
 * 上方还是有3个缺口，所以目标价格是250$ 补缺口，而且应该是急速拉升，不要乱减仓. 第一个阻力位220(34.7),第二个位置250(52).才回本。不要乱减仓。行成底部突破后(1h MACD 底背离，双突破，可以考虑call)
 * ![image](https://github.com/user-attachments/assets/fc95e980-0396-4402-bf83-00d998b61254)
+* ![image](https://github.com/user-attachments/assets/828ac73c-250c-426d-8188-4f233a1d3db7)
 
 * ![image](https://github.com/user-attachments/assets/aab6174e-bd3c-4b28-8da8-b81e9e0fae0d)
 # 8.7 日ASML 看法，作为今天领涨的标的，已经到了最强的一个陡峭缺口，877附近，所以今天确实有可能高开低走被打下来一波。但是下方也有支撑和超卖，它也到了EMA动力位置。
 ![image](https://github.com/user-attachments/assets/1c138855-bb37-4144-9ed1-ce07f43e71b8)
 ![image](https://github.com/user-attachments/assets/17b0f298-cf51-4897-96b0-623887c1c66f)
+# 8.7 日 NVDA看法，上方111.77,107 左右的压力和EMA 压力已经到了，所以SOXX 反弹也差不多了
+![image](https://github.com/user-attachments/assets/05526b9e-8c25-4310-923c-aac5437ca778)
+![image](https://github.com/user-attachments/assets/8485660a-a335-447d-9c51-9564d5e29e27)
+# 8.7 日IWM
+![image](https://github.com/user-attachments/assets/ee36ee6d-3da0-4615-9a1a-270764a92957)
+
+
 
 
