--- a/8.5,8.9交易计划.md
+++ b/8.5,8.9交易计划.md
@@ -7,7 +7,7 @@
 * 经济数据最重要的就是PMI，以及周四失业金人数。如果都是50以下的衰退，那就要崩了。失业金人数如果大超预期，也是继续崩。但是如果都好于预期，大的反转就在路上了
 * ![image](https://github.com/user-attachments/assets/a0ab7845-2e5c-42fd-8eb7-e0f06a5076bc)
 
-# 8.5- 8.9 交易计划，几个关键点位436，462，474，趋势还是向下，但是接近436 平空单，接近474就开空单。
+# 8.5- 8.9 交易计划，几个关键点位436，462，474，趋势还是向下，但是接近436 平空单，接近474就开空单。SPY 再次碰到MA20反压下来的时候，就是次高点出货开始正式下跌
 # 8月份剧本
 * 因为8月有大量的回购，所以整体是跌不下去的，猜测的剧本，先到462补两个缺口，到EMA被压下来，回踩446支撑再突破442和下降趋势向484补缺口。这个缺口一定要补的，最多留一个突破缺口就是490.但是只要没过484都还是下降震荡趋势，再破位还是空头。
 * ![image](https://github.com/user-attachments/assets/676261cd-aedf-4dd7-9244-ca91865630f4)
