--- a/8.5,8.9交易计划.md
+++ b/8.5,8.9交易计划.md
@@ -1,4 +1,6 @@
 # 财报日期
+![image](https://github.com/user-attachments/assets/ca72f5f0-3ae5-4285-aac8-634c98d99494)
+
 * 本周要特别关于减肥药板块，因为减肥药是这一波拉升的另一个主力，在周三周四
 * ![image](https://github.com/user-attachments/assets/8e1cf0e7-f84e-4067-a24a-991af9718d24)
 
