--- a/滚量交易记录.md
+++ b/滚量交易记录.md
@@ -1,2 +1,3 @@
 # 滚量交易记录
 * 8.6 开盘，回补缺口，436，上方压力在442， 它高开没遇到压力就回补缺口，吸货的可能更大。另外高开低走的概率小于30%。 开仓1,100$的443QQQ期权
+* 8.7 开盘，大高开，但是大下降趋势，第一次打到MA5， 在MA5上第一个压力位左侧开空卡仓1,250$, 盈利250$翻倍走人没加上。最后涨到1000
