--- a/8.5,8.9交易计划.md
+++ b/8.5,8.9交易计划.md
@@ -13,6 +13,14 @@
 # 8月份剧本
 * 因为8月有大量的回购，所以整体是跌不下去的，猜测的剧本，先到462补两个缺口，到EMA被压下来，回踩446支撑再突破442和下降趋势向484补缺口。这个缺口一定要补的，最多留一个突破缺口就是490.但是只要没过484都还是下降震荡趋势，再破位还是空头。
 * ![image](https://github.com/user-attachments/assets/676261cd-aedf-4dd7-9244-ca91865630f4)
+## 8.8 日交易计划，猜想的剧本1，星期4收十字星（因为扣抵还在上方红色箭头，但是周5就到下方箭头了）。所以周四继续被压制，反弹拉回，但是周5只要高开在影线部分及之上，就可以冲一波540压力位。判断标准是516这个位置能不能守得住，如果盘前低于这个位置，那就直奔507这个支撑位置去，之后必看495.但是已经是布林轨道3层外了，继续杀的可能性小于5%。
+* 剧本1，如果高开在516之上，最好是521之上，就会在521和528之间震荡，MA5 今天在526, 明天在522,还是压力。所以高开会有下影线补缺口，回踩516，520，只要不跌破516这个位置，那周5大涨的可能性很高。明早有失业金，11点有GDP.
+* 剧本2，如果低开在516之下，就是崩溃下跌，先看506再看497，这个版本概率很低。
+* 操作，如果是剧本1，几乎就是什么都不做，盘前把MNQ买回来，待涨，跌破516就止损。如果是剧本2，就立刻collar 锁仓，上限设置5 日之内 5270甚至5258的压力区之下
+* ![image](https://github.com/user-attachments/assets/37676406-672d-45ca-8bcf-83152ce542be)
+*![image](https://github.com/user-attachments/assets/f0a54a3e-1d53-4ac6-baba-89c2f20b10ee)
+
+
 ## 8.7 日交易计划
 ### 从筹码分析以及EMA动力上看，538-540这个位置的压力，和514这个区域的支撑将会是未来争夺的关键。我认为未来2个星期将会在这个区间震荡。所以当过了530这个中枢的时候，要注意保护利润。开盘就在MA5附近（530）而扣抵今天在最高位置，周五扣抵就是最低位置了。所以周五之前
 ### 只要不跌破524，那肯定能冲538这个位置了
