--- a/持仓分析.md
+++ b/持仓分析.md
@@ -1,6 +1,13 @@
 # 持仓股票分析
-| Symbol | 趋势 | 基本面评级 |
-|----------|----------|----------|
-| Row 1, Column 1 | Row 1, Column 2 | Row 1, Column 3 |
-| Row 2, Column 1 | Row 2, Column 2 | Row 2, Column 3 |
-| Row 3, Column 1 | Row 3, Column 2 | Row 3, Column 3 |
+| Symbol | 趋势 | 基本面评级 | 仓位 | 持仓理由 |
+|----------|----------|----------|----------|----------|
+| AWK | 底部双突破，长期MA上横盘 | B,SB,H | 2800 | 技术形态有长期上涨潜力 |
+| Row 2, Column 1 | Row 2, Column 2 | Row 2, Column 3 | Row 2, Column 4 | Row 2, Column 5 |
+| Row 3, Column 1 | Row 3, Column 2 | Row 3, Column 3 | Row 3, Column 4 | Row 3, Column 5 |
+
+
+
+* ![image](https://github.com/user-attachments/assets/c28779cb-1d09-4e03-9a2b-6cca2a0b94ca)
+* ![image](https://github.com/user-attachments/assets/39004d6b-6bba-4569-8134-c937c5bca7ce)
+
+
