--- a/持仓分析.md
+++ b/持仓分析.md
@@ -4,6 +4,9 @@
 | AWK | 底部双突破，长期MA上横盘 | B,SB,H | 2800 | 技术形态有长期上涨潜力 |
 | Row 2, Column 1 | Row 2, Column 2 | Row 2, Column 3 | Row 2, Column 4 | Row 2, Column 5 |
 | Row 3, Column 1 | Row 3, Column 2 | Row 3, Column 3 | Row 3, Column 4 | Row 3, Column 5 |
+# SU
+* 2024.8.7 只要这个支撑和趋势不破，都是右侧，一直持有
+* ![image](https://github.com/user-attachments/assets/4bcb28ce-342c-47e9-9549-94002244cd26)
 
 
 
