--- a/持仓分析.md
+++ b/持仓分析.md
@@ -7,10 +7,12 @@
 # SU
 * 2024.8.7 只要这个支撑和趋势不破，都是右侧，一直持有
 * ![image](https://github.com/user-attachments/assets/4bcb28ce-342c-47e9-9549-94002244cd26)
-
-
-
 * ![image](https://github.com/user-attachments/assets/c28779cb-1d09-4e03-9a2b-6cca2a0b94ca)
 * ![image](https://github.com/user-attachments/assets/39004d6b-6bba-4569-8134-c937c5bca7ce)
+# SNOW
+* 突破260才能进入右侧,也就是要比现在121要翻倍才行。并且远远低于上市价格，易跌难涨，很可能进入死亡螺旋。反弹到121，如果QQQ也到压力附近，就买远期远距离put.
+* ![image](https://github.com/user-attachments/assets/863d5bc6-7be5-4ee2-8fa9-b6a9777a8983)
+
+
 
 
