--- a/龙头分析.md
+++ b/龙头分析.md
@@ -2,4 +2,9 @@
 * 8.8 日分析，微软现在仍处于红色下降趋势线压制，跌破了一个年线级的红色趋势，如果短期不能突破440 的核心压力位走向右侧。那就要在280最强支撑和10年度趋势寻底。320是很好的位置，280是黄金坑。
 * 没过440 这个位置，都是越高越卖
 ![image](https://github.com/user-attachments/assets/b7dfdd84-0601-45d7-b46b-e31f7d9af333)
+# NVDA
+* 8.8 日分析，NVDA如果跌破了100$ 这个位置，就要区75这个被腰斩的位置寻底，因为筹码稀疏，跌的会非常快。要非常小心。要突破了128附近的黄色框才能右侧走强，继续长牛。
+* ![image](https://github.com/user-attachments/assets/2342575d-c5c9-4954-9e5e-f37a2f0cd570)
+
+
 
