--- a/龙头分析.md
+++ b/龙头分析.md
@@ -3,8 +3,10 @@
 * 没过440 这个位置，都是越高越卖
 ![image](https://github.com/user-attachments/assets/b7dfdd84-0601-45d7-b46b-e31f7d9af333)
 # NVDA
-* 8.8 日分析，NVDA如果跌破了100$ 这个位置，就要区75这个被腰斩的位置寻底，因为筹码稀疏，跌的会非常快。要非常小心。要突破了128附近的黄色框才能右侧走强，继续长牛。
+* 8.8 日分析，NVDA如果跌破了100$ 这个位置，就要区75这个被腰斩的位置寻底，因为筹码稀疏，跌的会非常快。要非常小心。要突破了128附近的黄色框才能右侧走强，继续长牛。49-53才是真正筹码密集区，也不是完全没可能。
 * ![image](https://github.com/user-attachments/assets/2342575d-c5c9-4954-9e5e-f37a2f0cd570)
+* ![image](https://github.com/user-attachments/assets/2132d7d3-4278-4cea-804a-b7b2e9b59e99)
+
 
 
 
