--- a/龙头分析.md
+++ b/龙头分析.md
@@ -6,6 +6,12 @@
 * 8.8 日分析，NVDA如果跌破了100$ 这个位置，就要区75这个被腰斩的位置寻底，因为筹码稀疏，跌的会非常快。要非常小心。要突破了128附近的黄色框才能右侧走强，继续长牛。49-53才是真正筹码密集区，也不是完全没可能。
 * ![image](https://github.com/user-attachments/assets/2342575d-c5c9-4954-9e5e-f37a2f0cd570)
 * ![image](https://github.com/user-attachments/assets/2132d7d3-4278-4cea-804a-b7b2e9b59e99)
+# GOOGL
+* 8.8 日分析， 谷歌可以说是7巨头里最安全的投资，首先它还在估值之下，25年估值在上方的绿色区域。第2，它走的非常文件，下方都是筹码区，而且它离上升趋势绿色线还很近，下一波跌还是可以在这里寻底。最差到下方第2个箭头寻底，也是超级黄金坑。
+
+* ![image](https://github.com/user-attachments/assets/468cc6fb-fe46-4264-be12-bbdaec3f6f4f)
+* ![image](https://github.com/user-attachments/assets/234a5035-ea54-4be5-b337-99f3e5e8b0e2)
+
 
 
 
