--- a/龙头分析.md
+++ b/龙头分析.md
@@ -8,6 +8,10 @@
 * ![image](https://github.com/user-attachments/assets/2132d7d3-4278-4cea-804a-b7b2e9b59e99)
 # GOOGL
 * 8.8 日分析， 谷歌可以说是7巨头里最安全的投资，首先它还在估值之下，25年估值在上方的绿色区域。第2，它走的非常文件，下方都是筹码区，而且它离上升趋势绿色线还很近，下一波跌还是可以在这里寻底。最差到下方第2个箭头寻底，也是超级黄金坑。
+* 8.9 日及下周剧本，谷歌这次整理非常稳，低点太高趋势非常明显，3k线突破会有4日所以突破当日（周五）会大涨直冲EMA和趋势线。下周1拉回，周2，3借助PCE，CPI数据大涨达到174的目标位置。
+* 原则就是只要还在上升趋势之上，没有双底破，就继续持有
+* ![image](https://github.com/user-attachments/assets/b2db3072-a7a4-4492-bfaf-e6fb5a2bcfc9)
+
 
 * ![image](https://github.com/user-attachments/assets/468cc6fb-fe46-4264-be12-bbdaec3f6f4f)
 * ![image](https://github.com/user-attachments/assets/234a5035-ea54-4be5-b337-99f3e5e8b0e2)
