--- a/8.5,8.9交易计划.md
+++ b/8.5,8.9交易计划.md
@@ -65,6 +65,11 @@
 ![image](https://github.com/user-attachments/assets/8485660a-a335-447d-9c51-9564d5e29e27)
 # 8.7 日IWM
 ![image](https://github.com/user-attachments/assets/ee36ee6d-3da0-4615-9a1a-270764a92957)
+# 8.9日 AMD看法，一直到下周持仓
+* 到第一个箭头，务必把sell put 解除，很可能会有很大的回踩。只要没跌破上升趋势，就看第2个箭头157.如果在157这里盘头，出现3k线跌破，趋势线跌破，果断全撤。
+* ![image](https://github.com/user-attachments/assets/ce98fd17-ffaa-45ea-b0da-c9d300e36b88)
+
+
 
 
 
