--- a/8.5,8.9交易计划.md
+++ b/8.5,8.9交易计划.md
@@ -1,5 +1,6 @@
 # 财报日期
 ![image](https://github.com/user-attachments/assets/ca72f5f0-3ae5-4285-aac8-634c98d99494)
+![image](https://github.com/user-attachments/assets/450b0308-eb06-4492-aac9-082d6700b0e2)
 
 * 本周要特别关于减肥药板块，因为减肥药是这一波拉升的另一个主力，在周三周四
 * ![image](https://github.com/user-attachments/assets/8e1cf0e7-f84e-4067-a24a-991af9718d24)
@@ -13,6 +14,11 @@
 # 8月份剧本
 * 因为8月有大量的回购，所以整体是跌不下去的，猜测的剧本，先到462补两个缺口，到EMA被压下来，回踩446支撑再突破442和下降趋势向484补缺口。这个缺口一定要补的，最多留一个突破缺口就是490.但是只要没过484都还是下降震荡趋势，再破位还是空头。
 * ![image](https://github.com/user-attachments/assets/676261cd-aedf-4dd7-9244-ca91865630f4)
+## 8.9 日交易计划
+* 如果期货突破532-527压力区，周5高开，那直接冲击538-541压力区，同时EMA动力区域，必定有拉回测试527区域和上升趋势线。到了538区域，就用一个MES collar锁定530-546 到下周3.在下降趋势线和强压力中期大概率要调整两个十字星，不可能直接突破。而且有一定概率这个位置就是反转，持续下降趋势
+* 继续突破到552 这个双头格局也是可能的，所以两个十字星之后要看突破方向了。跌破趋势线和538区域就是大调整或者继续空。如果到了544，那可能是一个慢空格局，在544再形成一个3k以上头部再掉头。
+* ![image](https://github.com/user-attachments/assets/035b4d6e-b69b-43ca-8d2c-e24b43f86a5a)
+
 ## 8.8 日交易计划，猜想的剧本1，星期4收十字星（因为扣抵还在上方红色箭头，但是周5就到下方箭头了）。所以周四继续被压制，反弹拉回，但是周5只要高开在影线部分及之上，就可以冲一波540压力位。判断标准是516这个位置能不能守得住，如果盘前低于这个位置，那就直奔507这个支撑位置去，之后必看495.但是已经是布林轨道3层外了，继续杀的可能性小于5%。
 * 剧本1，如果高开在516之上，最好是521之上，就会在521和528之间震荡，MA5 今天在526, 明天在522,还是压力。所以高开会有下影线补缺口，回踩516，520，只要不跌破516这个位置，那周5大涨的可能性很高。明早有失业金，11点有GDP.
 * 剧本2，如果低开在516之下，就是崩溃下跌，先看506再看497，这个版本概率很低。
